--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
         <activity
             android:name=".ui.ObjectDetectionActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ui.LandAnalysisActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
